--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
 body {
+  background-image: url("./laptopBackgroundImage.jpg");
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
   /*margin: 0;*/
   /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
   /*  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
   /*  sans-serif;*/
   /*-webkit-font-smoothing: antialiased;*/
   /*-moz-osx-font-smoothing: grayscale;*/
-  background-image: url("./laptopBackgroundImage.jpg");
-  background-size: cover;
+
 }
 
 code {
