fixed background duplication

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-body {
-  background-image: url("./laptopBackgroundImage.jpg");
+html {
+  background: url("./laptopBackgroundImage.jpg") no-repeat center center;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
+  -o-background-size: cover;
   /*margin: 0;*/
   /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
   /*  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
