--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,24 @@
 /*set background image, fit to browser window and make responsive */
 html {
   /* Photo by Arnold Francisca - Unsplash */
-  /*position: relative;*/
   background: url(laptopBackgroundImage.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  backdrop-filter: blur(2px);
 }
 
 .landing_page{
-  padding: 5rem;
+  padding: 2rem;
 }
 
 p {
-  font-size: 22px;
+  font-size: 26px;
   text-align: center;
-  padding: 7rem;
-  background: aqua;
-  opacity: 20%;
+  padding: 1rem;
   margin: auto;
-  /*margin-left: auto;*/
-  /*margin-right: auto;*/
-  width: 50%;
-}
-
-.intro_container {
-  padding: 2rem;
-}
-
-.skills_container {
-  padding: 2rem;
-}
-
-.social_container {
-  padding: 2rem;
+  width: 75%;
 }
 
 .profile_picture_container {
@@ -53,6 +37,71 @@ p {
   border-radius: 40%;
 }
 
+.intro_container {
+  padding: 2rem;
+}
+
+#introduction {
+  color: whitesmoke;
+}
+
+.skills_container {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  padding: 2rem;
+  /*position: relative;*/
+
+}
+
+img {
+  position: relative;
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  align-items: center;
+}
+
+.python_icon{
+  align-content: center;
+}
+
+.caption {
+  color: orange;
+  /*font-size: 20px;*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /*-ms-transform: translate(-50%, -50%);*/
+}
+
+.python_icon:hover{
+  opacity: 0.3;
+}
+
+.python_icon:hover .python_icon .caption{
+  opacity: 1;
+}
+
+.javascript_icon:hover{
+  opacity: 0.3;
+}
+
+.java_icon:hover{
+  opacity: 0.3;
+}
+
+.react_icon:hover{
+  opacity: 0.3;
+}
+
+.social_container {
+  padding: 2rem;
+  background: aqua;
+  opacity: 20%;
+}
+
 /* mobile styling */
 @media (max-device-width: 812px) {
 
@@ -68,10 +117,9 @@ p {
   }
 
   p {
-    background: lightcoral;
+    /*background: lightcoral;*/
     opacity: 75%;
-    padding: 5rem;
-    /*width: 100%;*/
+    width: 50%;
   }
 }
 
