--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 html {
     /* Photo by Arnold Francisca - Unsplash */
-    background: url(laptopBackgroundImage.jpg) no-repeat center center fixed;
+    background: url(images/laptopBackgroundImage.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
