--- a/src/components/styles/projects.css
+++ b/src/components/styles/projects.css
@@ -8,6 +8,7 @@
 #section_title {
     color: whitesmoke;
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .password_length_selection {
@@ -19,9 +20,26 @@
     justify-content: space-evenly;
 }
 
+label.container {
+    height: 56px;
+    width: 56px;
+}
+
+.select_box .container {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.user_selections {
+    margin-top: 50px;
+    text-align: center;
+}
+
 /* Customize the label (the container) */
 .container {
-    display: block;
+    display: flex;
     position: relative;
     padding-left: 35px;
     margin-bottom: 12px;
@@ -43,15 +61,6 @@
     width: 0;
 }
 
-/* Hide the browser's default select box */
-.container select {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-
 /* Create a custom checkbox */
 .checkmark {
     position: absolute;
@@ -62,15 +71,25 @@
     background-color: #eee;
 }
 
+/* Hide the browser's default select box */
+.container select {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
 /* Create a custom select box */
-/*.custom_select {*/
-/*    position: relative;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    height: 25px;*/
-/*    width: 25px;*/
-/*    background-color: #eee;*/
-/*}*/
+.custom_select_box{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 5px;
+    width: 75px;
+    color: #eeeeee;
+    background-color: #eee;
+}
 
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
