--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@ html {
 }
 
 body {
-    margin: 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -17,15 +18,13 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.section_title {
-    text-align: center;
+#section_title {
+    color: whitesmoke;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
-.landing_page{
-    padding: 2rem;
-}
-
-p {
+#section_text {
     color: whitesmoke;
     font-size: 24px;
     text-align: center;
@@ -90,7 +89,6 @@ p {
     html {
         /*background-size: 100%;*/
         /*width: 100%;*/
-
     }
 
     .profile_picture {
