--- a/src/components/styles/projects.css
+++ b/src/components/styles/projects.css
@@ -5,15 +5,6 @@
     margin-left: 15px;
 }
 
-#section_title {
-    color: whitesmoke;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.password_length_selection {
-    padding-left: 35px;
-}
 
 .checkboxes {
     display: flex;
@@ -23,13 +14,6 @@
 label.container {
     height: 56px;
     width: 56px;
-}
-
-.select_box .container {
-    display: flex;
-    justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
 }
 
 .user_selections {
@@ -80,17 +64,6 @@ label.container {
     width: 0;
 }
 
-/* Create a custom select box */
-.custom_select_box{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 5px;
-    width: 75px;
-    color: #eeeeee;
-    background-color: #eee;
-}
-
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
     background-color: #ccc;
@@ -125,5 +98,25 @@ label.container {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
+.password_output {
+    display: flex;
+    justify-content: center;
+}
+
+#label_text {
+    color: whitesmoke;
+}
+
+#password_display_box {
+    color: whitesmoke;
+    height: 50px;
+    width: 500px;
+    margin-right: 5px;
+    border-radius: 10px;
+    text-align: center;
+    font-weight: bolder;
+}
+
 
 
