--- a/src/App.css
+++ b/src/App.css
@@ -67,20 +67,21 @@ body {
     border-radius: 50%;
 }
 
-.python_icon:hover{
-    opacity: 0.3;
+.python_container:hover{
+    opacity: 0.5;
+    transition: opacity 0.2s ease;
 }
 
-.javascript_icon:hover{
-    opacity: 0.3;
+.javascript_container:hover{
+    opacity: 0.5;
 }
 
-.java_icon:hover{
-    opacity: 0.3;
+.java_container:hover{
+    opacity: 0.5;
 }
 
-.react_icon:hover{
-    opacity: 0.3;
+.react_container:hover{
+    opacity: 0.5;
 }
 
 /* mobile styling */
