--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+    --white-text: #f5f5f5;
+    --page_title_font_size: 40px;
+    --icon-hover-opacity: 0.5;
+    --icon-hover-transition: opacity 0.2s ease;
+}
+
 html {
     /* Photo by Arnold Francisca - Unsplash */
     background: url(images/laptopBackgroundImage.jpg) no-repeat center center fixed;
@@ -18,14 +25,25 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-#section_title {
-    color: whitesmoke;
+.content_container {
+    display: flex;
+    justify-content: center;
+
+}
+
+#page_title_text {
+    color: var(--white-text);
+    font-size: var(--page_title_font_size);
+}
+
+#section_title_text {
+    color: var(--white-text);
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
 #section_text {
-    color: whitesmoke;
+    color: var(--white-text);
     font-size: 24px;
     text-align: center;
     padding: 1rem;
@@ -69,21 +87,13 @@ body {
     border-radius: 50%;
 }
 
-.python_container:hover{
-    opacity: 0.5;
-    transition: opacity 0.2s ease;
-}
-
-.javascript_container:hover{
-    opacity: 0.5;
-}
-
-.java_container:hover{
-    opacity: 0.5;
-}
-
-.react_container:hover{
-    opacity: 0.5;
+.python_container:hover,
+.javascript_container:hover,
+.java_container:hover,
+.react_container:hover
+{
+    opacity: var(--icon-hover-opacity);
+    transition: var(--icon-hover-transition);
 }
 
 /* mobile styling */
@@ -92,6 +102,10 @@ body {
     html {
         /*background-size: 100%;*/
         /*width: 100%;*/
+    }
+
+    .page_title{
+        flex-wrap: wrap;
     }
 
     .skills_container {
