--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ p {
 
 .content_container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     text-align: center;
     margin-top: 20px;
@@ -308,8 +309,13 @@ iframe {
     }
 
     img {
-        width: 50px;
-        height: 50px
+        width: 50%;
+        height: 50%;
+        margin-top: 10px;
+    }
+
+    .programming_language_img_container {
+        padding: 0;
     }
 
     .text_containers {
